🐧🌹 Checkpoint ./index.html:22308402/935

--- a/index.html
+++ b/index.html
@@ -47,18 +47,17 @@
         </p>
         
         <p class="third-paragraph">
-          Samstag 8 Juni 18.00 Uhr<br />
-          Die Meistersinger von Nurnberg<br />
-          Oper von Richard Wagner<br />
-          Zum 150 Geburtstag<br />
-          Richard Wagners<br />Sonntag 9 Juni 20.00 Uhr<br />
-          Die Zauberflote<br />
-          Oper von<br />Wolfgang Amadeus Mozart<br />
-          Dienstag. 11 Juni 20.00 Uhr<br />Fidelio<br />
-          Oper von<br />
-          Ludwig van Beethoven<br />
-          Freitag 14 Juni 20.00 Uhr<br />
-          Otello<br />
+          Samstag 15. Juni 18.00 Uhr
+          Parsifal
+          Buhnenweihfestspiel von 
+          Richard Wagner
+          Zum 150 Geburtstag
+          Richard Wagners
+          Mittwoch 19. Juni 20.00 Uhr
+          Il Trovatore
+          Oper von Giuseppe Verdi
+          Freitag 21 Juni 20.00 Uhr
+          Rigoletto
           Oper von Giuseppe Verdi
           
         </p>
