🌚😻 Checkpoint ./index.html:22308402/2003 ./sass/styles.scss:22308402/581

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="css/styles.scss" rel="stylesheet" />
     <title>Brockmann Poster</title>
   </head>
+  
+  
   <body>
     <main class="container">
       <section class="gallery">
@@ -16,9 +18,9 @@
         <h2>1963</h2>
         <h3>Stadttheater</h3>
         <h4>Juni-Festwochen</h4>
-        <h5>Internationale</h5>
+        <h5>Internationale</h5></div>
         
-
+<div>
         <ul class="first-paragraph">
           <li>Mittwoch 29. Mai 18.00 Uhr</li>
           <li>Donnerstag, 6 Juni 1800 Uhr</li>
@@ -33,6 +35,8 @@
           <li>Zum 150 Geburtstag</li>
           <li>Richard Wagners</li>
         </ul> 
+  
+        </div>
 
         <p class="second-paragraph">
           <ul>
