🍍💾 Checkpoint ./sass/styles.scss:22308402/517 ./index.html:22308402/65

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h5>Internationale</h5></div>
         
 
-      <section class="gallery">
+      <section class="events">
         <div>
       
         <ul class="first-paragraph moretype">
