--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <main class="container">
       
-      <div>
+      <div class="headlines">
         <h1>1963</h1>
         <h2>Zurich</h2>
         <h3>Stadttheater</h3>
